--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,13 @@
     <!--✏️✏️✏️ Adding required link for the project (Boxicon CDN & link Css) -->
 
     <!--========== BOX ICONS ==========-->
-    <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+    <!-- <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'> -->
 
     <!--========== CSS ==========-->
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <!-- <link rel="stylesheet" href="assets/css/styles.css"> -->
+
+    <!-- ✏️✏️✏️ Adding CSS CDN Link of Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 
     <title>Xtream-Text-Converter</title>
   </head>
@@ -52,5 +55,9 @@
     <!--  ✏️✏️✏️ Link Main JS file & Scroll reveal (Ln 53 & 54 only) -->
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="assets/js/main.js"></script>
+
+<!-- Adding JS CDN link to Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
   </body>
 </html>
